# OpenChat2.0

./: .env.example  .gitignore  CHANGELOG.md  DEBUG_FILE_PERSISTENCE.md  LICENSE  LICENSE.md  MULTI_LANGUAGE_EXECUTION_SUMMARY.md  PACKAGE_MANAGEMENT_IMPROVEMENTS.md  README.md  RUNTIME_MANAGER_IMPROVEMENTS.md  TEST_README.md  WEB_SEARCH_MULTI_PROVIDER_PLAN.md  package-lock.json  package.json  verify_tauri_setup.py
.cargo/: config.toml
backend/: app.py  pyproject.toml  requirements.txt  start_backend.py
backend/chains/: compose.py
backend/memory/: store.py
backend/models/: llm.py
backend/provider/: ollama.py
docs/: CODE_EXECUTION_GUIDE.md  PACKAGE_MANAGEMENT_GUIDE.md  VERSIONING.md
frontend/: README.md
frontend/src/: auth.css  auth.js  index.html  main.js  styles.css
frontend/src-tauri/: Cargo.toml  start_backend_launcher.py  tauri.conf.json
scripts/: sync-version.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer.nsi
src-tauri/permissions/: commands.toml  http.toml
src-tauri/src/: lib.rs
src/components/: ApiUsageDisplay.tsx  Canvas.tsx  CanvasModelSelector.tsx  ChatArea.tsx  ChatInput.tsx  ChatMessage.tsx  CitationRenderer.tsx  CodeBlock.tsx  CudaButton.tsx  CudaSettings.tsx  ErrorBoundary.tsx  LoginModal.tsx  MarkdownRenderer.tsx  ModelSelector.tsx  ProfileButton.tsx  ProviderSettings.tsx  ReasoningBlock.tsx  RuntimeInstallModal.tsx  SafeMarkdownPreview.tsx  SearchResultsDisplay.tsx  SearchStatusIndicator.tsx  Settings.tsx  Sidebar.tsx  (+14 more)
(+93 files in other folders)
