[project]
name = "openchat20-backend"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "langchain-core>=0.2.20,<0.3.0",
  "langchain-ollama==0.1.1",
  "pydantic==2.8.2",
  "requests==2.32.3",
  "python-dotenv==1.0.1",
]

[tool.uv]
# uv configuration (optional)
